Fixed h2 on mobile

--- a/style.css
+++ b/style.css
@@ -278,6 +278,8 @@ button.btn {
     }
 
     h2 {
-        display: none;
+        font-size: 25px;
+        margin: 0 0 12px;
     }
+    
 }
